@@ -29,6 +29,7 @@ public class RoadMapImpl implements RoadMap {
     public final int gridSize = 40;
     private final Coords[] defaultEntrances =
         {new Coords(0, gridSize/2), new Coords(gridSize/2, 0)};
+         //new Coords(0, gridSize/2 - 2), new Coords(gridSize/2 - 2, 0)};
     private final char carChar = 'C';
     private char[][] grid;
     private List<Coords> roadEntrances = new ArrayList<Coords>();
@@ -40,7 +41,7 @@ public class RoadMapImpl implements RoadMap {
             for (int j = 0; j < gridSize; j++) {
                 grid[i][j] = 'x';
                 for (Coords k : roadEntrances) {
-                    if ((i > 0 && i == k.getX()) || 
+                    if ((i > 0 && i == k.getX()) ||
                         (j > 0 && j == k.getY())) {
                         	grid[i][j] = ' ';
                     }
@@ -72,7 +73,11 @@ public class RoadMapImpl implements RoadMap {
         }
         for(TrafficLight light : trafficLights) {
             int x=light.getCoords().getX(), y=light.getCoords().getY();
-            newGrid[x][y] = light.horizontalGreen() ? '>' : 'v';
+            if (light.getDelay() != 0) {
+                newGrid[x][y] = 'o';
+            } else {
+                newGrid[x][y] = light.horizontalGreen() ? '>' : 'v';
+            }
         }
 
         //print new grid to screen
@@ -91,7 +96,6 @@ public class RoadMapImpl implements RoadMap {
     1st - closest car position from intersection for road 1 (0-8, 9 if no cars) X
     2nd - closest car position from intersection for road 2 (0-8, 9 if no cars X
     3rd - light setting (ie 0-green, 1 red for one of the roads) X
-    4th - light delay (0-3)
      */
     // Needs to take in traffic light so it can tell which one to work the things out for
     public int stateCode(TrafficLight t) {
@@ -102,8 +106,7 @@ public class RoadMapImpl implements RoadMap {
             lightSetting = 1;
         }
 
-        hash += t.getDelay();
-        hash += 10*lightSetting;
+        hash += lightSetting;
         
         // For each road off the traffic lights
         // Follow it back until we hit either 9 or a car
@@ -118,7 +121,7 @@ public class RoadMapImpl implements RoadMap {
                 break;
             }
         }
-        hash += 100*i;
+        hash += 10*i;
         
         c = new Coords(t.getCoords());
         // Road two we'll go horizontally
@@ -128,7 +131,7 @@ public class RoadMapImpl implements RoadMap {
                 break;
             }
         }
-        hash += 1000*i;
+        hash += 100*i;
     
         return hash;
     }
