@@ -22,8 +22,9 @@ public interface TrafficLight
     //Time until calling switchLight() will have an effect
     int getDelay();
 
-    //Inform the light that a unit of time has passed.
-    void clock();
+    //Inform the light that a unit of time has passed. - returns 1/0 whether lights switched or not.
+    //It is here because of the amber phase
+    Boolean clock();
 
     boolean horizontalGreen();
 }
